deploy/tracing/minikube/ingress-local.yaml
# Copyright (C) 2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger-query
  labels:
    app: jaeger
    jaeger-infra: query-service
spec:
  rules:
  - host: jaeger.atmos.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: jaeger-query
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger-collector
  labels:
    app: jaeger
    jaeger-infra: collector-service
spec:
  rules:
  - host: collector.atmos.minikube
    http:
      paths:
      - path: /tchannel
        backend:
          serviceName: jaeger-collector
          servicePort: 14267
      - path: /http
        backend:
          serviceName: jaeger-collector
          servicePort: 14268
      - path: /zipkin
        backend:
          serviceName: jaeger-collector
          servicePort: 9441
